# nazanin_v1

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BIO_SYSTEM_GUIDE.md  CHANGELOG.md  CLEANUP_LIST.txt  CONTRIBUTING.md  DASHBOARD_GUIDE.md  DOWNLOAD_AND_RUN.md  Dockerfile  FEATURE_SUGGESTIONS_FA.md  FINAL_REVIEW.md  FINAL_REVIEW_V3.md  FINAL_SETUP_GUIDE.md  FINAL_SUMMARY_FA.md  FINAL_SUMMARY_V2.1.md  FINAL_SUMMARY_V2.md  FREE_API_SERVICES.md  FUTURE_FEATURES.md  GOOGLE_SHEETS_NEW_STRUCTURE.md  GOOGLE_SHEETS_SETUP.md  HOW_NAZANIN_WORKS.md  INSTALLATION.md  LICENSE  MANIFEST.in  Makefile  NORA_INTEGRATION_GUIDE.md  PROJECT_COMPLETE.md  PROJECT_FINAL_STATUS.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_IDEAS.md  QUICK_START.md  QUICK_START_BIO.md  README.md  README_BIO.md  SHEETS_SYSTEM_GUIDE.md  START_HERE.md  (+41 more)
.github/workflows/: python-test.yml
agent_system/: __init__.py  agent.py  environment.py  rl_agent.py
app/: layout.tsx
app/login/: page.tsx
brain_simulation/: __init__.py  brain.py  memory.py  neuron.py
components/: Sidebar.tsx
config/: config.enhanced.json  config.example.json
core/: __init__.py  config.py  logger.py
dashboard/: README.md  requirements.txt
dashboard/backend/: main.py
docs/: ADVANCED_FEATURES.md  COMPLETE_SUMMARY.md  DEPLOYMENT.md  MODULE_STRUCTURE.md
examples/: __init__.py  advanced_usage.py  basic_usage.py
integration/: __init__.py  coordinator.py  unified_system.py
nazanin/: __init__.py  __main__.py  app.py  app_v4_advanced.py  app_v5_complete.py
nazanin/advanced/: __init__.py  agents_30.py  algorithms_50.py  modules_30.py
nazanin/ai/: brain_simulation.py  neural_agent.py
nazanin/autonomous/: __init__.py  autonomous_system.py
nazanin/bio_system/: __init__.py  body_systems.py
nazanin/brain/: __init__.py  deep_neural_brain.py  perception_awareness.py
nazanin/byteline/: __init__.py  byteline_bot.py
nazanin/consciousness/: __init__.py  living_persona.py
nazanin/core/: __init__.py  sheets_auto_setup.py
nazanin/domain_agents/: __init__.py  specialized_domain_agents.py
nazanin/security/: __init__.py
nazanin/sheets_system/: __init__.py  initial_data.py  initialization_manager.py  sheets_agents.py  sheets_modules.py  spreadsheet_structure.py
nazanin_bot/: __init__.py  main_bot.py
nazanin_bot/behaviors/: __init__.py  human_like_behaviors.py  personality.py  social_behaviors.py
nazanin_bot/brain/: __init__.py  cognitive_core.py  consciousness.py  neural_processor.py
nazanin_bot/config/: __init__.py  settings.py
nazanin_bot/decision/: __init__.py  autonomous_decision.py  goal_manager.py  planning.py
nazanin_bot/emotions/: __init__.py  emotion_detector.py  emotional_intelligence.py  mood_manager.py
nazanin_bot/learning/: __init__.py  adaptive_learning.py  experience_replay.py
nazanin_bot/memory/: __init__.py  long_term_memory.py  memory_consolidation.py  short_term_memory.py
nazanin_bot/perception/: __init__.py  context_analyzer.py  input_processor.py
nazanin_bot/utils/: __init__.py  logger.py  time_utils.py
neural_network/: __init__.py  layers.py  neural_net.py  training.py
quantum_system/: __init__.py  quantum_processor.py  qubit.py
scripts/: create_sheets_structure.py
src/: __init__.py
src/agents/: __init__.py
src/ai/: __init__.py
src/bio_system/: __init__.py  body_systems.py  cell_system.py
src/consciousness/: __init__.py  metacognition_engine.py  self_evolution_system.py
src/core/: __init__.py  api_manager_v2.py  sheets_manager_v2.py
src/domain_agents/: __init__.py
src/security/: __init__.py  security_manager.py
src/storage/: __init__.py  telegram_storage.py
src/utils/: __init__.py  advanced_algorithms.py  behavioral_learning.py  message_classifier.py  template_system.py
store/: authStore.ts
tests/: __init__.py  demo.py  demo_advanced.py  test_basic.py
(+9 files in other folders)
